2006-06-03  Brian Warner  <warner@lothar.com>

	* contrib/windows/{setup.py, buildbot_service.py}: add support for
	running py2exe on windows, contributed by Mark Hammond. Addresses
	SF#1401121, but I think we still need to include
	buildbot/scripts/sample.cfg
	* setup.py: include buildbot_service.py as a script under windows
	* buildbot/status/html.py: when sys.frozen (i.e. we're running in
	a py2exe application), get the icon/css datafiles from a different
	place than usual.

	* buildbot/status/mail.py (MailNotifier.buildMessage): don't
	double-escape the build URL. Thanks to Olivier Bonnet for the
	patch. Fixes SF#1452801.

2006-06-02  Brian Warner  <warner@lothar.com>

	* contrib/svn_buildbot.py (ChangeSender.getChanges): ignore the
	first six columns of 'svnlook' output, not just the first column,
	since property changes appear in the other five. Thanks to Olivier
	Bonnet for the patch. Fixes SF#1398174.

2006-06-01  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_web.py (Logfile.setUp): set the .reason on
	the fake build, so that title= has something to be set to

	* buildbot/status/html.py (BuildBox.getBox): set the 'title='
	attribute of the "Build #NN" link in the yellow start-the-build
	box to the build's reason. This means that you get a little
	tooltip explaining why the build was done when you hover over the
	yellow box. Thanks to Zandr Milewski for the suggestion.

	* buildbot/clients/gtkPanes.py (Box.setColor): ignore color=None
	(Box.setETA): handle ETA=None (by stopping the timer)
	(Box.update): make the [soon] text less different than the usual
	text, so the rest of the text doesn't flop around so much. It
	would be awfully nice to figure out how to center this stuff.
	(ThreeRowBuilder.stepETAUpdate): more debugging printouts

	* buildbot/process/step.py (ShellCommand): set flunkOnFailure=True
	by default, so that any ShellCommand which fails marks the overall
	build as a failure. I should have done this from the beginning.