@@ -1,3 +1,9 @@
+2006-06-06  Brian Warner  <warner@lothar.com>
+
+	* buildbot/process/step.py (WithProperties): make this inherit
+	from ComparableMixin, so that reloading an unchanged config file
+	doesn't cause us to spuriously reload any Builders which use them.
+
 2006-06-03  Brian Warner  <warner@lothar.com>
 
 	* contrib/windows/{setup.py, buildbot_service.py}: add support for
